# pitr

./: sdkconfig
.github/workflows/: build.yml
components/lvgl_esp32_drivers/lvgl_i2c/: i2c_manager.c
components/lvgl_esp32_drivers/lvgl_tft/: ssd1306.c
docs/: COMMANDS.md
include/managers/: rgb_manager.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/managers/: display_manager.c
